--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-linkify": "^1.0.0-alpha",
+    "recharts": "^2.0.9",
     "sass": "^1.32.8"
   }
 }
