--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev -- -p 3005",
     "build": "next build",
-    "start": "next start"
+    "export": "next export",
+    "deploy": "npm run build && npm run export",
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "axios": "^0.21.1",
