--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "next": "10.1.3",
     "react": "17.0.2",
