--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-linkify": "^1.0.0-alpha",
+    "react-paginate": "^7.1.3",
     "recharts": "^2.0.9",
     "sass": "^1.32.8"
   }
